<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/top_app_bar"
            app:titleTextColor="@color/primaryTextColor">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_theme_button" />

    <TextView
        style="@style/heading_text_style"
        android:text="@string/normal_text_on_background" />

    <com.google.android.material.chip.Chip
        android:id="@+id/first_chip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_chip" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="4dp"
        app:strokeWidth="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Card " />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>